🐛 FIX: Align hamburger menu

--- a/material.css
+++ b/material.css
@@ -602,7 +602,7 @@ svg.vertical-three-dots {
 /* Hamburger menu */
 .view-header-icon {
   color: var(--background-primary-alt);
-  padding-left: 15px;
+  padding-left: 20px;
 }
 
 /* -------------- */
